Create the PSR-4 autoload wih root namespace agendor\RDStationPHPClient
Namespace points to /app directory

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
             "name": "Tulio Monte Azul",
             "email": "tulio@agendor.com.br"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {
+            "agendor\\RDStationPHPClient\\" : "app/"
+        }
+    }
 }
